@@ -77,6 +77,8 @@ var localized_strings,
 			options_changelog: "Changelog:",
 			options_general: "General",
 			options_clear: "Are you sure you wish to reset all options? This cannot be undone.",
+			options_hide_owned: "Items you own in search results",
+			options_hide_owned_homepage: "Items you own on the homepage",
 			regional_price: "Regional Price Comparison",
 			regional_price_on: "Show regional price comparison",
 			regional_price_mouse: "on Price Mouseover",
